--- a/index.html
+++ b/index.html
@@ -122,6 +122,58 @@
                 </div>
             </div>
         </div>
+        <div class="developer">
+            <div class="container">
+                <div class="developer__container">
+                    <div class="developer__img">
+                        <img src="img/main/im.jpg" alt="">
+                    </div>
+                    <div class="developer__text">
+                        <p class="developer__hello">Рад вас видеть</p>
+                        <h2 class="developer__title">Я Николай</h2>
+                        <p class="developer__txt">Я разрабатываю сайты для людей и компаний.</p>
+                        <p class="developer__logo">Код, Работа, Обучение</p>
+                        <p class="developer__txt">Могу собрать страницу для вашей компании, даже если запускать её нужно уже завтра. Из инструментов есть: Photoshop, Figma, HTML, CSS, JavaScript</p>
+                        <img class="developer__signature" src="img/main/загруженное.png" alt="">
+                    </div>
+                </div>
+                <div class="developer__description">
+                    <p>Работаю с разными языками и инструментами</p>
+                    <ul class="tags">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>SCSS</li>
+                        <li>GULP</li>
+                        <li>GIT</li>
+                        <li>БЭМ</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <section class="feedback">
+            <div class="container">
+                <div class="feedback__container">
+                    <h2 class="feedback__title">Готов обсудить проект...</h2>
+                    <form action="#" class="form">
+                        <div class="input-block">
+                            <label class="form__label" for="username">Имя</label>
+                            <input id="username" type="text" class="input">
+                        </div>
+                        <div class="input-block">
+                            <label class="form__label" for="useremail">Email</label>
+                            <input id="useremail" type="text" class="input">
+                        </div>
+                        <div class="input-block">
+                            <label class="form__label" for="usermessage">Сообщение</label>
+                            <textarea id="usermessage" type="text" class="input textarea"></textarea>
+                        </div>
+                    </form>
+                    <button type="submit" class="feedback__button"><img src="img/main/airplane.svg" alt=""><span>Отправить</span></button>
+                </div>
+                
+            </div>  
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script>
