--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/main/smile.svg" type="image/x-icon" >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;500;600;800;900&;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>My-Protfolio</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <header class="header">
@@ -20,10 +21,10 @@
                 </div>
                 <nav>
                     <ul  class="header__list">
-                        <li class="header__item"><a href="#" class="header__link">Главная</a></li>
-                        <li class="header__item"><a href="#" class="header__link">Проекты</a></li>
-                        <li class="header__item"><a href="#" class="header__link">Обо мне</a></li>
-                        <li class="header__item"><a href="#" class="header__link">Связаться</a></li>
+                        <li class="header__item"><a href="#a1" class="header__link">Главная</a></li>
+                        <li class="header__item"><a href="#a2" class="header__link">Проекты</a></li>
+                        <li class="header__item"><a href="#a3" class="header__link">Обо мне</a></li>
+                        <li class="header__item"><a href="#a4" class="header__link">Связаться</a></li>
                     </ul>
                 </nav>
             </div>
@@ -31,7 +32,7 @@
         </div>
     </header>
     <main>
-        <div class="salutation">
+        <div class="salutation" id="a1">
             <div class="container">
                 <div class="salutation__container">
                     <div class="salutation__emoji">
@@ -43,14 +44,14 @@
                             <div class="salutation__description"><span>Я фронтенд-разработчик и веб-дизайнер</span> Меня зовут Николай Шестопёров и я делаю сайты для людей и компаний</div>
                         </div>
                         <div class="salutation__links">
-                            <a href="#" class="salutation__link"><img src="img/main/git.svg" alt=""></a>
+                            <a href="https://github.com/zxcghul" class="salutation__link" target="_blank"><img src="img/main/git.svg" alt=""></a>
                             <a href="#" class="salutation__link"><img src="img/main/screp.svg" alt=""><span>Скачать резюме</span></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="project">
+        <div class="project" id="a2">
             <div class="container">
                 <div class="project__container">
                     <h2>Последние проекты</h2>
@@ -69,8 +70,8 @@
                                         </ul>
                                         <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                                         <div class="project__links">
-                                            <a href="#"><img src="img/main/arrows.svg" alt=""><span>Код</span></a>
-                                            <a href="#"><img src="img/main/Ok.svg" alt=""><span>Демо</span></a>
+                                            <a href="https://github.com/zxcghul/Web-projects/tree/main/VideoApp" target="_blank"><img src="img/main/arrows.svg" alt=""><span>Код</span></a>
+                                            <a href="https://im-portant.ru/VideoApp/" target="_blank"><img src="img/main/Ok.svg" alt=""><span>Демо</span></a>
                                         </div>
                                     </div>    
                                 </div>
@@ -89,8 +90,8 @@
                                         </ul>
                                         <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                                         <div class="project__links">
-                                            <a href="#"><img src="img/main/arrows.svg" alt=""><span>Код</span></a>
-                                            <a href="#"><img src="img/main/Ok.svg" alt=""><span>Демо</span></a>
+                                            <a href="https://github.com/zxcghul/Web-projects/tree/main/OfficeDirect" target="_blank"><img src="img/main/arrows.svg" alt=""><span>Код</span></a>
+                                            <a href="https://im-portant.ru/OfficeDirect/" target="_blank"><img src="img/main/Ok.svg" alt=""><span>Демо</span></a>
                                         </div>
                                     </div>    
                                 </div>
@@ -109,8 +110,8 @@
                                         </ul>
                                         <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                                         <div class="project__links">
-                                            <a href="#"><img src="img/main/arrows.svg" alt=""><span>Код</span></a>
-                                            <a href="#"><img src="img/main/Ok.svg" alt=""><span>Демо</span></a>
+                                            <a href="https://github.com/zxcghul/Web-projects/tree/main/Деложизни" target="_blank"><img src="img/main/arrows.svg" alt=""><span>Код</span></a>
+                                            <a href="https://im-portant.ru/ДелоЖизни/" target="_blank"><img src="img/main/Ok.svg" alt=""><span>Демо</span></a>
                                         </div>
                                     </div>    
                                 </div>
@@ -122,7 +123,7 @@
                 </div>
             </div>
         </div>
-        <div class="developer">
+        <div class="developer" id="a3">
             <div class="container">
                 <div class="developer__container">
                     <div class="developer__img">
@@ -151,7 +152,7 @@
                 </div>
             </div>
         </div>
-        <section class="feedback">
+        <section class="feedback" id="a4">
             <img class="feedback__hand" src="img/main/hand.png" alt="">
             <div class="container">
                 <div class="feedback__container">
